# deja-vu

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
deja/: __init__.py  cli.py  config.py
deja/commands/: __init__.py  ask_cmd.py  capture_cmd.py  chat_cmd.py  forget_cmd.py  llm_reword.py  memify_cmd.py  seed_cmd.py  start_cmd.py
deja/models/: __init__.py  graph.py
deja/store/: __init__.py  cloud.py  env.py  graph_store.py  search.py
deja/ui/: __init__.py  graph_api.py  server.py
deja/ui/static/: index.html
docs/: AI_DISCLOSURE.md  DEMO.md  REPORT.md  TELEPROMPTER.md
tests/: test_chat.py  test_cold_open.py  test_forget.py  test_llm_reword.py  test_memify.py  test_schema_and_seed.py  test_smoke.py
